src/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> main
Rule 1     main -> head body
Rule 2     head -> head keyword
Rule 3     head -> head NEWLINE
Rule 4     head -> <empty>
Rule 5     body -> body style
Rule 6     body -> body REST
Rule 7     body -> body newline
Rule 8     body -> <empty>
Rule 9     style -> STYLE
Rule 10    newline -> NEWLINE
Rule 11    keyword -> KEYWORD

Terminals, with rules where they appear

KEYWORD              : 11
NEWLINE              : 3 10
REST                 : 6
STYLE                : 9
error                : 

Nonterminals, with rules where they appear

body                 : 1 5 6 7
head                 : 1 2 3
keyword              : 2
main                 : 0
newline              : 7
style                : 5

Parsing method: LALR

state 0

    (0) S' -> . main
    (1) main -> . head body
    (2) head -> . head keyword
    (3) head -> . head NEWLINE
    (4) head -> .

    NEWLINE         reduce using rule 4 (head -> .)
    KEYWORD         reduce using rule 4 (head -> .)
    REST            reduce using rule 4 (head -> .)
    STYLE           reduce using rule 4 (head -> .)
    $end            reduce using rule 4 (head -> .)

    head                           shift and go to state 1
    main                           shift and go to state 2

state 1

    (1) main -> head . body
    (2) head -> head . keyword
    (3) head -> head . NEWLINE
    (5) body -> . body style
    (6) body -> . body REST
    (7) body -> . body newline
    (8) body -> .
    (11) keyword -> . KEYWORD

  ! shift/reduce conflict for NEWLINE resolved as shift
    NEWLINE         shift and go to state 5
    REST            reduce using rule 8 (body -> .)
    STYLE           reduce using rule 8 (body -> .)
    $end            reduce using rule 8 (body -> .)
    KEYWORD         shift and go to state 3

  ! NEWLINE         [ reduce using rule 8 (body -> .) ]

    keyword                        shift and go to state 6
    body                           shift and go to state 4

state 2

    (0) S' -> main .



state 3

    (11) keyword -> KEYWORD .

    NEWLINE         reduce using rule 11 (keyword -> KEYWORD .)
    KEYWORD         reduce using rule 11 (keyword -> KEYWORD .)
    REST            reduce using rule 11 (keyword -> KEYWORD .)
    STYLE           reduce using rule 11 (keyword -> KEYWORD .)
    $end            reduce using rule 11 (keyword -> KEYWORD .)


state 4

    (1) main -> head body .
    (5) body -> body . style
    (6) body -> body . REST
    (7) body -> body . newline
    (9) style -> . STYLE
    (10) newline -> . NEWLINE

    $end            reduce using rule 1 (main -> head body .)
    REST            shift and go to state 8
    STYLE           shift and go to state 9
    NEWLINE         shift and go to state 7

    newline                        shift and go to state 10
    style                          shift and go to state 11

state 5

    (3) head -> head NEWLINE .

    NEWLINE         reduce using rule 3 (head -> head NEWLINE .)
    KEYWORD         reduce using rule 3 (head -> head NEWLINE .)
    REST            reduce using rule 3 (head -> head NEWLINE .)
    STYLE           reduce using rule 3 (head -> head NEWLINE .)
    $end            reduce using rule 3 (head -> head NEWLINE .)


state 6

    (2) head -> head keyword .

    NEWLINE         reduce using rule 2 (head -> head keyword .)
    KEYWORD         reduce using rule 2 (head -> head keyword .)
    REST            reduce using rule 2 (head -> head keyword .)
    STYLE           reduce using rule 2 (head -> head keyword .)
    $end            reduce using rule 2 (head -> head keyword .)


state 7

    (10) newline -> NEWLINE .

    REST            reduce using rule 10 (newline -> NEWLINE .)
    STYLE           reduce using rule 10 (newline -> NEWLINE .)
    NEWLINE         reduce using rule 10 (newline -> NEWLINE .)
    $end            reduce using rule 10 (newline -> NEWLINE .)


state 8

    (6) body -> body REST .

    REST            reduce using rule 6 (body -> body REST .)
    STYLE           reduce using rule 6 (body -> body REST .)
    NEWLINE         reduce using rule 6 (body -> body REST .)
    $end            reduce using rule 6 (body -> body REST .)


state 9

    (9) style -> STYLE .

    REST            reduce using rule 9 (style -> STYLE .)
    STYLE           reduce using rule 9 (style -> STYLE .)
    NEWLINE         reduce using rule 9 (style -> STYLE .)
    $end            reduce using rule 9 (style -> STYLE .)


state 10

    (7) body -> body newline .

    REST            reduce using rule 7 (body -> body newline .)
    STYLE           reduce using rule 7 (body -> body newline .)
    NEWLINE         reduce using rule 7 (body -> body newline .)
    $end            reduce using rule 7 (body -> body newline .)


state 11

    (5) body -> body style .

    REST            reduce using rule 5 (body -> body style .)
    STYLE           reduce using rule 5 (body -> body style .)
    NEWLINE         reduce using rule 5 (body -> body style .)
    $end            reduce using rule 5 (body -> body style .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for NEWLINE in state 1 resolved as shift
